# Fault-Resistant-Partitioning

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md
config/: README.md  config_file.json
examples/: .gitignore  README.md
examples/aes128/: Makefile  prep.ys  src.list
examples/secure_ibex/: Makefile  prep.ys  script.sh
examples/skinny64/: Makefile  prep.ys  src.list
src/: CMakeLists.txt  Cell.cpp  Cell.h  Circuit.cpp  Circuit.h  VerilogId.h  cell_types.cpp  cell_types.h  config.cpp  config.h  k-partitions.cpp  utils.cpp  utils.h
submission_cases/: README.md
submission_cases/secure_ibex/: ibex_d3_interface.json  ibex_fixed_rf_interface.json  ibex_interface.json  ibex_partitions.json  lockstep_partitions.json
submission_cases/skinny64/: skinny64_red1.json  skinny64_red3.json  skinny64_red4.json
